# writeBinaries

./: .gitignore  CMakeLists.txt  README.md  test
matrices/: README.md
src/: writeBinaries.c
